--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -46,10 +46,10 @@
 
                     <div class="d-flex justify-content-center ">
                         <button class="btn btn-success mr-4" type="submit">Cadastrar</button>
-                        <button class="btn btn-danger" type="submit">Cancelar</button>
+                        <button class="btn btn-danger" type="submit" routerLink='/entrar'>Cancelar</button>
                     </div>
 
-                
+
                 </div>
             </div>
         </div>
