--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -16,13 +16,13 @@
                         <label for="senha">Senha</label>
                         <input class="form-control" type="password" name="senha" id="senha" placeholder="Digite a sua senha">
                     </div>
-
+            
                     <div class="d-flex justify-content-center">
                         <button class="btn btn-success" type="submit">Entrar</button>
                     </div>
 
                     <hr class="my-5">
-                    <p class="text-center cortext font-weight-light"> Não tem uma conta? <a href="#">Cadastre-se</a></p>
+                    <p class="text-center cortext font-weight-light"> Não tem uma conta? <a routerLink='/cadastrar'>Cadastre-se</a></p>
 
                 </div>
             </div>
