--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -2,8 +2,8 @@
 
     <div class="row d-flex align-items-center">
 
-          <!-- LADO ESQUERDO (IMAGEM) -->
-          <div class="col-lg-6 col-md-6 col-sm-6" id="img-fundo"></div>
+        <!-- LADO ESQUERDO (IMAGEM) -->
+        <div class="col-lg-6 col-md-6 col-sm-6" id="img-fundo"></div>
 
         <div class="col-lg-6 col-md-6 my-5">
             <div class="row d-flex justify-content-center">
@@ -11,33 +11,38 @@
                     <h1 class="text-center mb-3">Cadastrar</h1>
 
                     <div class="form-group">
-                        <label for="Nome">Usuario</label>
-                        <input class="form-control" type="text" name="nome" id="nome" placeholder="Digite o seu nome completo">
+                        <label for="Nome">Nome</label>
+                        <input [(ngModel)]='user.nome' class="form-control" type="text" name="nome" id="nome"
+                            placeholder="Digite o seu nome completo">
                     </div>
 
                     <div class="form-group">
                         <label for="Usuario">Usuario</label>
-                        <input class="form-control" type="text" name="usuario" id="ususario" placeholder="Digite seu usuario">
+                        <input [(ngModel)]='user.usuario' class="form-control" type="text" name="usuario" id="ususario"
+                            placeholder="Digite seu usuario">
                     </div>
 
                     <div class="form-group">
                         <label for="linkFoto">Link da foto</label>
-                        <input class="form-control" type="text" name="linkFoto" id="linkFoto" placeholder="Insira o link da foto">
+                        <input [(ngModel)]='user.foto' class="form-control" type="text" name="linkFoto" id="linkFoto"
+                            placeholder="Insira o link da foto">
                     </div>
 
                     <div class="form-group">
                         <label for="senha">Senha</label>
-                        <input class="form-control" type="password" name="senha" id="senha" placeholder="Digite a sua senha">
+                        <input (input)='validarSenha($event)' class="form-control" type="password" name="senha"
+                            id="senha" placeholder="Digite a sua senha">
                     </div>
 
                     <div class="form-group">
                         <label for="confimSenha">Confirmar Senha</label>
-                        <input class="form-control" type="password" name="confimSenha" id="confimSenha" placeholder="Confirme sua senha">
+                        <input [(ngModel)]='user.senha' class="form-control" type="password" name="confimSenha"
+                            id="confimSenha" placeholder="Confirme sua senha">
                     </div>
 
                     <div class="form-group">
                         <label for="confimSenha">Tipo de usuario</label>
-                        <select name="tipo" id="tipo" class="form-control">
+                        <select name="tipo" id="tipo" class="form-control" (change)='validarUser($event)'>
                             <option value="">Selecione o tipo de usuario</option>
                             <option value="normal">Normal</option>
                             <option value="adm">Aministrador</option>
@@ -45,17 +50,11 @@
                     </div>
 
                     <div class="d-flex justify-content-center ">
-                        <button class="btn btn-success mr-4" type="submit">Cadastrar</button>
+                        <button class="btn btn-success mr-4" type="submit" (click)='cadastrar()'>Cadastrar</button>
                         <button class="btn btn-danger" type="submit" routerLink='/entrar'>Cancelar</button>
                     </div>
-
-
                 </div>
             </div>
         </div>
-
-    
-
     </div>
-
 </div>
