--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -9,16 +9,16 @@
 
                     <div class="form-group">
                         <label for="usuario">Usuario</label>
-                        <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Digite o seu usuario">
+                        <input [(ngModel)]='userLogin.usuario' class="form-control" type="text" name="usuario" id="usuario" placeholder="Digite o seu usuario">
                     </div>
 
                     <div class="form-group">
                         <label for="senha">Senha</label>
-                        <input class="form-control" type="password" name="senha" id="senha" placeholder="Digite a sua senha">
+                        <input [(ngModel)]='userLogin.senha' class="form-control" type="password" name="senha" id="senha" placeholder="Digite a sua senha">
                     </div>
             
                     <div class="d-flex justify-content-center">
-                        <button class="btn btn-success" type="submit">Entrar</button>
+                        <button class="btn btn-success" type="submit" (click)='entrar()'>Entrar</button>
                     </div>
 
                     <hr class="my-5">
