--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,1 +1,80 @@
-<p>inicio works!</p>
+<div class="container-fluid">
+    <div class="row d-flex align-items-center fundo">
+        <div class="col-lg-6 col-md-6 ">
+            <div class="row d-flex justify-content-end">
+                <div class="col-lg-6 col-md-6">
+                    <h1 class="cortexto display-1 font-weight-light">Seja Bem vindo(a)</h1>
+                    <h5 class="cortexto ">expresse aqui os seus pensamentos e opiniões</h5>
+                </div>
+            </div>
+            <div class="row d-flex justify-content-end mt-3 mb-5">
+                <div class="col-lg-6 col-md-6 ">
+                    <button class="btn btn-light mr-3" data-toggle="modal" data-target="#novaPostagem">Nova Postagem</button>
+                    <a class="btn btn-outline-light" href="#postagens">Ver Postagens</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-6 col-md-6 d-flex justify-content-around align-items-center">
+            <img class="img-fluid m-0 p-0" src="../../assets/img/img-menu.png" alt="img-menu" width="60%">
+        </div>
+    </div>
+</div>
+
+<div class="container" id="postagens">
+    <nav>
+        <div class="nav nav-tabs d-flex justify-content-center my-5" id="nav-tab" role="tablist">
+            <a class="nav-link active text-secondary" id="nav-todasPostagens" data-toggle="tab" href="#todasPostagens"
+                role="tab" aria-controls="nav-home" aria-selected="true">Todas as postagens</a>
+            <a class="nav-link text-secondary" id="nav-minhasPostagens" data-toggle="tab" href="#minhasPostagens"
+                role="tab" aria-controls="nav-profile" aria-selected="false">Minhas postagens</a>
+            <a class="nav-link text-secondary" id="nav-postagensTema" data-toggle="tab" href="#postagensTema" role="tab"
+                aria-controls="nav-contact" aria-selected="false">Postagens por Tema</a>
+        </div>
+    </nav>
+    <div class="tab-content" id="nav-tabContent">
+        <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens">
+            Todas as Postagens</div>
+        <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens">Minhas
+            Postagens</div>
+        <div class="tab-pane fade" id="postagensTema" role="tabpanel" aria-labelledby="nav-postagensTema">Postagens por
+            tema</div>
+    </div>
+</div>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="novaPostagem" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="TituloModalCentralizado">Nova Postagem</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+
+         <div class="form-group">
+            <label for="titulo">Titulo</label>
+            <input type="text" class="form-control" id="titulo" placeholder="Digite o titulo da postagem">
+         </div>
+
+         <div class="form-group">
+            <label for="texto">Texto</label>
+            <textarea class="form-control" name="texto" id="texto" rows="10"></textarea>
+         </div>
+
+         <div class="form-group">
+            <label for="tema">Escolha um tema ou <a href="">cadastre um novo</a></label>
+            <select class="form-control" name="tema" id="tema">
+                <option value="">Temas</option>
+            </select>
+         </div>
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">CANCELAR</button>
+          <button type="button" class="btn btn-success">POSTAR</button>
+        </div>
+      </div>
+    </div>
+  </div>
