--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -10,15 +10,15 @@
         <ul class="navbar-nav mr-auto d-flex align-items-center">
 
             <li class="nav-item active">
-                <img src="../../assets/img/isaque.jpeg" alt="imagem de perfil" width="50px" height="50px"
-                    class="img-fluid"><!--rounded-circle-->
+                <img src="{{foto}}" alt="imagem de perfil" width="45px"
+                    class="img-fluid rounded-circle">
                 <!--FOTO DA PESSOA NO MENU -->
             </li>
 
             <li class="nav-item pl-3">
                 <p class="m-0 font-weight-light cortext {
                     color: bisque;
-                  } fs-16 ">Nome do usuario</p>
+                  } fs-16 ">{{nome}}</p>
             </li>
             
         </ul>
@@ -30,7 +30,7 @@
             </li>
 
             <li class="nav-item pl-3">
-                <a href="#">
+                <a (click)='sair()'>
                     <p class="text-light fs-16 m-0"><i class="fa fa-sign-out cortext" aria-hidden="true"></i></p>
                 </a>
             </li>
