adicionando o componente tema

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -10,22 +10,20 @@
         <ul class="navbar-nav mr-auto d-flex align-items-center">
 
             <li class="nav-item active">
-                <img src="{{foto}}" alt="imagem de perfil" width="45px"
-                    class="img-fluid rounded-circle">
+                <img src="{{foto}}" alt="imagem de perfil" width="45px" class="img-fluid rounded-circle">
                 <!--FOTO DA PESSOA NO MENU -->
             </li>
 
             <li class="nav-item pl-3">
-                <p class="m-0 font-weight-light cortext {
-                    color: bisque;
-                  } fs-16 ">{{nome}}</p>
+                <p class="m-0 font-weight-light cortexto fs-16">{{nome}}</p>
             </li>
-            
+
         </ul>
         <ul class="navbar-nav ml-auto d-flex align-items-center">
             <li class="nav-item pl-3">
                 <a href="#">
-                    <p class="text-light fs-16 m-0 cortext"><i class="fa fa-pencil-square-o cortext" aria-hidden="true"></i></p>
+                    <p class="text-light fs-16 m-0 cortext"><i class="fa fa-pencil-square-o cortext"
+                            aria-hidden="true"></i></p>
                 </a>
             </li>
 
