--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -64,7 +64,7 @@
          </div>
 
          <div class="form-group">
-            <label for="tema">Escolha um tema ou <a href="">cadastre um novo</a></label>
+            <label for="tema">Escolha um tema ou <a routerLink='/tema' data-dismiss="modal" >cadastre um novo</a></label>
             <select class="form-control" name="tema" id="tema">
                 <option value="">Temas</option>
             </select>
@@ -73,7 +73,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" data-dismiss="modal">CANCELAR</button>
-          <button type="button" class="btn btn-success">POSTAR</button>
+          <button type="button" class="btn btn-success" data-dismiss="modal" >POSTAR</button>
         </div>
       </div>
     </div>
