--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -9,10 +9,11 @@
             <div class="row d-flex justify-content-center mt-4 mb-5">
                 <div class="col-lg-3">
                     <div class="form-group">
-                        <input type="text" class="form-control" id="descricao" placeholder="digite a descrição do tema">
+                        <input [(ngModel)]='tema.descricao' type="text" class="form-control" id="descricao"
+                            placeholder="digite a descrição do tema">
                     </div>
                     <div class="d-flex justify-content-center">
-                        <button class="btn btn-light">Cadastrar</button>
+                        <button class="btn btn-light" (click)='cadastrarTema()'>Cadastrar</button>
                     </div>
                 </div>
             </div>
@@ -30,33 +31,23 @@
         <div class="col-lg-6">
             <table class="table table-hover">
                 <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Primeiro</th>
-                    <th scope="col">Último</th>
-                    <th scope="col">Nickname</th>
-                  </tr>
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">Nome do Tema</th>
+                        <th scope="col" class="text-center">Modificações</th>
+                    </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td colspan="2">Larry the Bird</td>
-                    <td>@twitter</td>
-                  </tr>
+                    <tr *ngFor='let i of listaTemas'>
+                        <td>{{i.id}}</td>
+                        <td>{{i.descricao}}</td>
+                        <td class="d-flex justify-content-end">
+                            <button class="btn btn-info mr-3">Editar</button>
+                            <button class="btn btn-danger">Apagar</button>
+                        </td>
+                    </tr>
                 </tbody>
-              </table>
+            </table>
         </div>
     </div>
 </div>
