--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -72,6 +72,9 @@
                                 às {{ i.data | date: "HH:mm" }}
                             </small>
                         </p>
+
+                        <a [routerLink]="['/postagem-edit',i.id]" class="text-info mr-3" href="">Editar</a>
+                        <a [routerLink]="['/postagem-delete',i.id]" class="text-danger" href="">Apagar</a>
                     </div>
                 </div>
             </div>
