implementando put na camada usuario

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -21,7 +21,7 @@
         </ul>
         <ul class="navbar-nav ml-auto d-flex align-items-center">
             <li class="nav-item pl-3">
-                <a href="#">
+                <a [routerLink]="['/user-edit', id]">
                     <p class="text-light fs-16 m-0 cortext"><i class="fa fa-pencil-square-o cortext"
                             aria-hidden="true"></i></p>
                 </a>
