--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -37,7 +37,7 @@
         <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens">
 
             <div class="card-columns">
-                <div class="card h-100" *ngFor='let i of listaPostagens'>
+                <div class="card h-100" *ngFor="let i of listaPostagens | orderBy: key : reverse">
                     <div class="card-body text-center">
                         <img src="{{i.usuario.foto}}" alt="imagem de perfil" width="45px"
                             class="img-fluid rounded-circle">
@@ -58,9 +58,10 @@
         <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens">
 
             <div class="card-columns">
-                <div class="card h-100" *ngFor='let i of user.postagem'>
+                <div class="card h-100" *ngFor='let i of user.postagem | orderBy: key : reverse'>
                     <div class="card-body text-center">
-                        <!-- <img src="{{i.usuario.foto}}" alt="imagem de perfil" width="45px" class="img-fluid rounded-circle"> -->
+                        <img src="{{fotop}}" alt="imagem de perfil" width="45px"
+                            class="img-fluid rounded-circle">
                         <!-- <p class="card-text"><small class="text-muted">Postado por: {{i.usuario.nome}}</small></p> -->
                         <h5 class="card-title">{{i.titulo}}</h5>
                         <p class="card-text"><small class="text-muted">Tema: {{i.tema.descricao}}</small></p>
@@ -81,7 +82,7 @@
         <div class="tab-pane fade" id="postagensTema" role="tabpanel" aria-labelledby="nav-postagensTema">
 
             <div class="card-columns" *ngFor='let t of listaTemas'>
-                <div class="card h-100" *ngFor='let i of t.postagem'>
+                <div class="card h-100" *ngFor='let i of t.postagem | orderBy: key : reverse'>
                     <div class="card-body text-center">
                         <img src="{{i.usuario.foto}}" alt="imagem de perfil" width="45px"
                             class="img-fluid rounded-circle">
